Added picture of me

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!--navigation-->
     <header>
         <h1 class="light-background">Aidan Meyer</h1>
+        <img src="assets/images/Image-1.jpg" alt="Aidan holding a fish on the open water" width="auto" height="39px">
         <nav>
             <ul>
                 <li><a href="#about-me">About Me</a></li>
@@ -20,6 +21,7 @@
         </nav>
     </header>
     <!--hero-->
+    
     <section class= "hero">
         <h2 class="light-background">Portfolio Page</h2>
     </section>
