Updated Contact Me Section

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
             <address>
                 <ul>
                     <li> 707.601.8460</li>
+                    <li> Discord: Zopes#5759</li>
                     <li><a href="mailto:afordm99@gmail.com">afordm99@gmail.com</a></li>
                     <li><a href="https://github.com/">GitHub</a></li>
                     
