--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
     <!--hero-->
     
     <section class= "hero">
-        <h2 class="light-background">Portfolio Page</h2>
+        <div class="hero-text">
+            <h2 class="light-background">Portfolio Page</h2>
+        </div>
     </section>
     <section class="content">
     <!--about me-->
@@ -44,7 +46,7 @@
             <div class="container">
                 <div class="grid-container">
                     <a class="grid-item item-1" href="https://xxlzopes.github.io/run-buddy/"></a>
-                    <a class="grid-item item-2">No Content</a>
+                    <a class="grid-item item-2" href="https://goals-social-network.herokuapp.com/"></a>
                     <a class="grid-item item-3">No Content</a>
                     <a class="grid-item item-4">No Content</a>
                     <a class="grid-item item-5">No Content</a>
